[tool.poetry]
name = "llm-data-analyst"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "llm_data_analyst"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
pandas = "^2.0.3"
streamlit = "^1.25.0"
langchain = "^0.0.265"
docarray = "^0.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
